<resources>
    <string name="app_name" translatable="false">KondrN</string>
    <string name="background_file" translatable="false">background.png</string>
    <string name="home_phone" translatable="false">+375&#8211;17&#8211;266&#8211;74&#8211;98</string>
    <string name="github" translatable="false">github</string>
    <string name="mobile_phone" translatable="false">+375&#8211;33&#8211;635&#8211;29&#8211;77</string>
    <string name="my_vk" translatable="false">vk.com/id0</string>
    <string name="vk" translatable="false">VK</string>
    <string name="my_instagram" translatable="false">instagram.com/</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="my_github" translatable="false">https://github.com/KondratyonokNikita</string>
    <string name="app_matrica_api" translatable="false">334a9fb9-a817-444c-9fa9-476d7c5c7b18</string>

    <string name="alphabeticallyAZ">Alphabetically AZ</string>
    <string name="alphabeticallyZA">Alphabetically ZA</string>
    <string name="dark_theme">Dark theme</string>
    <string name="delete">Delete</string>
    <string name="dense_layout">Dense layout</string>
    <string name="dense_layout_description">Portrait: 5 icons in a row\n Landscape: 7 icons in a row</string>
    <string name="greeting">Greeting</string>
    <string name="info">Information</string>
    <string name="installation_date">By installation date</string>
    <string name="launched">Launched</string>
    <string name="launcher_activity">Grid</string>
    <string name="layout">Layout</string>
    <string name="layout_description">The density of icons on the screen</string>
    <string name="light_theme">Light theme</string>
    <string name="list_activity">List</string>
    <string name="most_frequent">By frequency</string>
    <string name="my_name">Nikita Kondratyonok</string>
    <string name="no_sort">No sorting</string>
    <string name="settings">Settings</string>
    <string name="sorting_method">Sorting method</string>
    <string name="sorting_method_description">Order of the location of applications</string>
    <string name="standard_layout">Standard layout</string>
    <string name="standard_layout_description">Portrait: 4 icons in a row\n Landscape: 6 icons in a row</string>
    <string name="start">Start</string>
    <string name="theme">Theme</string>
    <string name="theme_description">Theme used in the application</string>
    <string name="times">time(s)</string>
    <string name="layout_manager_type">Layout manager type</string>
    <string name="layout_manager_type_description">Grid or linear</string>
    <string name="grid">Grid</string>
    <string name="linear">Linear</string>
    <string name="need_welcome_page">Need welcome page</string>
    <string name="need_welcome_page_description">Need welcome page description</string>
    <string name="mobile">Mobile</string>
    <string name="home">Home</string>
    <string name="yandex_email" translatable="false">nikita.kondratenok@yandex.ru</string>
    <string name="email">email</string>
    <string name="my_address" translatable="false">Rogachevskaya 7A</string>
    <string name="address">Address</string>
    <string name="desktop">Desctop</string>
    <string name="applications">Applications</string>
    <string name="screen">Screen</string>
    <string name="to_desktop">To desktop</string>
</resources>
