<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/FirstBigRadioButton"
        android:id="@+id/light_theme"
        android:clickable="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        tools:ignore="NestedWeights"
        android:focusable="true">

        <RadioButton
            style="@style/RadioButton"
            android:id="@+id/light_radio_button"
            android:checked="true" />

        <TextView
            style="@style/ThemeName"
            android:layout_toEndOf="@+id/light_radio_button"
            android:layout_alignBaseline="@+id/light_radio_button"
            android:text="@string/light_theme" />

    </RelativeLayout>

    <RelativeLayout
        style="@style/SecondBigRadioButton"
        android:id="@+id/dark_theme"
        android:clickable="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:focusable="true">

        <RadioButton
            style="@style/RadioButton"
            android:id="@+id/dark_radio_button" />

        <TextView
            style="@style/ThemeName"
            android:layout_toEndOf="@+id/dark_radio_button"
            android:layout_alignBaseline="@+id/dark_radio_button"
            android:text="@string/dark_theme" />

    </RelativeLayout>
</LinearLayout>
