...
        android:focusable="true"
        android:gravity="center_vertical"
        tools:ignore="NestedWeights">

        <RadioButton
            style="@style/RadioButton"
            android:id="@+id/standard_radio_button"
            android:checked="true" />

        <TextView
            style="@style/LayoutName"
            android:layout_toEndOf="@+id/standard_radio_button"
            android:layout_alignBaseline="@+id/standard_radio_button"
...
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <RadioButton
            style="@style/RadioButton"
            android:id="@+id/dense_radio_button" />

        <TextView
            style="@style/LayoutName"
            android:layout_toEndOf="@+id/dense_radio_button"
            android:layout_alignBaseline="@+id/dense_radio_button"
            android:text="@string/dense_layout" />
...
