<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

        <ImageView
            style="@style/AppIcon"
            android:id="@+id/icon"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/my_name"
            app:srcCompat="@mipmap/photo" />

        <TextView
            style="@style/AppDescription"
            android:layout_below="@+id/icon"
            android:layout_centerHorizontal="true"
            android:text="@string/greeting" />

</RelativeLayout>
